--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./style.css">
     <script src="script.js" defer></script>
-    <title>Пригласительное</title>
+    <title>scam</title>
 </head>
 <body>
-<h1>Hey purddy lady Leila, will you be my Valentine?</h1>
+<h1>Vikinka, budeš moja valentínka?</h1>
 <article>
     <div class="image"></div>
     <div class="btns">
-        <button id="nooo">No((</button>
-        <button id="yessir">Да!</button>
+        <button id="nooo">Tiež áno.((</button>
+        <button id="yessir">Áno</button>
     </div>
 </article>
 <p>created by: <span>@shoqqan</span></p>
