--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@
         <button id="yessir">Áno</button>
     </div>
 </article>
-<p>created by: <span>@shoqqan</span></p>
+<p>created by: <span>@palynko</span></p>
 </body>
 </html>
