--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>scam</title>
 </head>
 <body>
-<h1>Vikinka, budeš moja valentínka?</h1>
+<h1>Vikinka, budeš moja valentínka?💖 </h1>
 <article>
     <div class="image"></div>
     <div class="btns">
