--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 <article>
     <div class="image"></div>
     <div class="btns">
-        <button id="nooo">Tiež áno.((</button>
-        <button id="yessir">Áno</button>
+        <button id="nooo">Nie. 😢((</button>
+        <button id="yessir">Áno. 🤩</button>
     </div>
 </article>
 <p>created by: <span>@palynko</span></p>
