--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body>
 <h1>Vikinka 💖
     Budeš moja valentínka? </h1>
+<h2>Pozývam ťa na valentínske rande, 14. februára 🥰 </h2>
 <article>
     <div class="image"></div>
     <div class="btns">
