--- a/index.html
+++ b/index.html
@@ -10,9 +10,8 @@
     <title>scam</title>
 </head>
 <body>
-<h1>Vikinka 💖
-    Budeš moja valentínka? </h1>
-<h2>Pozývam ťa na valentínske rande, 14. februára 🥰 </h2>
+<h1>Vikinka 💖 </h1>
+<h2>Budeš moja valentínka? </h2>
 <article>
     <div class="image"></div>
     <div class="btns">
