--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <article>
     <div class="image"></div>
     <div class="btns">
-        <button id="nooo">Nie. 😢((</button>
+        <button id="nooo">Nie! ((</button>
         <button id="yessir">Áno. 🤩</button>
     </div>
 </article>
